--- a/attentions.ipynb
+++ b/attentions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-11T18:51:46.129829Z",
@@ -34,13 +34,13 @@
     },
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
+    "collapsed": false,
     "id": "wnuOEkE85lwZ",
     "init_cell": true
    },
    "outputs": [],
    "source": [
-    "guy_folder = \"/vol/scratch/guy\" if universityStorage else \"/content\""
+    "guy_folder = \"/home/olab/amnlp2020/guy_ariel/guy/\" if universityStorage else \"/content\""
    ]
   },
   {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-11T18:51:48.838700Z",
@@ -177,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/specific/scratches/scratch/guy\n"
+      "/specific/netapp5_3/rent_public/olab-01-08-2021/amnlp2020/guy_ariel/guy\n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/specific/scratches/scratch/guy\n"
+      "/specific/netapp5_3/rent_public/olab-01-08-2021/amnlp2020/guy_ariel/guy\n"
      ]
     }
    ],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-11T18:52:42.121351Z",
@@ -357,12 +357,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Attempt 1"
+    "### Weighted Sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-10T18:50:04.829422Z",
@@ -420,9 +420,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]<ipython-input-6-e941748c006a>:11: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s]<ipython-input-7-e941748c006a>:11: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  w = F.softmax(self.weight)\n",
-      "  0%|          | 0/100 [00:00<?, ?it/s, Loss: 0.6684402227401733]"
+      "  2%|▏         | 2/100 [00:00<00:05, 17.40it/s, Loss: 0.12216677471026789]"
      ]
     },
     {
@@ -430,6 +430,103 @@
      "output_type": "stream",
      "text": [
       "Epoch 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 21.99it/s, Loss: 0.599739280654674] \n",
+      "  3%|▎         | 3/100 [00:00<00:03, 25.36it/s, Loss: 0.58899461418904]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 22.11it/s, Loss: 0.5366876176189199]\n",
+      "  3%|▎         | 3/100 [00:00<00:03, 24.92it/s, Loss: 0.5272608192127641]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 22.46it/s, Loss: 0.49121797214178214]\n",
+      "  2%|▏         | 2/100 [00:00<00:05, 16.39it/s, Loss: 0.48447533217522243]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 22.13it/s, Loss: 0.45554416261467334]\n",
+      "  3%|▎         | 3/100 [00:00<00:03, 25.22it/s, Loss: 0.448852472390009] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 22.68it/s, Loss: 0.42563819607252]  \n",
+      "  3%|▎         | 3/100 [00:00<00:03, 24.45it/s, Loss: 0.42020516657747925]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:04<00:00, 22.15it/s, Loss: 0.40433541072885715]\n",
+      "  2%|▏         | 2/100 [00:00<00:05, 16.44it/s, Loss: 0.3991636834758219] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 41%|████      | 41/100 [00:01<00:02, 22.27it/s, Loss: 0.38856489087807744]"
      ]
     }
    ],
@@ -437,154 +534,49 @@
     "attConv = AttentionCombiner()\n",
     "optimizer = torch.optim.Adam(attConv.parameters(), lr = 5e-3)\n",
     "criterion = nn.KLDivLoss(reduction = 'batchmean')\n",
-    "avg_loss = None\n",
+    "avg_loss = np.empty((24,16))\n",
     "beta = 0.95\n",
     "scheduler = (torch.optim.lr_scheduler\n",
     "             .ReduceLROnPlateau(optimizer, factor = 0.5, patience = 3, \n",
     "                                                       threshold = 1e-2,\n",
     "                                                       min_lr = 1e-4,\n",
     "                                                      verbose = True))\n",
+    "for layer in range(24):\n",
+    "    for head in range(16):\n",
+    "        for e in range(30):\n",
+    "            print(\"Epoch \" + str(e))\n",
+    "            t = tqdm(range(len(inputs_memmap)))\n",
+    "            for i in t:\n",
+    "              attConv.zero_grad()\n",
+    "              cur_inputs = inputs_memmap[i]\n",
+    "              cur_target = target_memmap[i, 10, 0]\n",
     "\n",
-    "for i in range(100):\n",
-    "    print(\"Epoch \" + str(i))\n",
-    "    t = tqdm(range(len(inputs_memmap)))\n",
-    "    for i in t:\n",
-    "      attConv.zero_grad()\n",
-    "      cur_inputs = inputs_memmap[i]\n",
-    "      cur_target = target_memmap[i, 10, 0]\n",
+    "              sent_len = _getSentLen(cur_target[0])\n",
+    "              inputs = torch.from_numpy(np.array(cur_inputs[:,:, :sent_len, :sent_len])).detach()\n",
+    "              target = torch.from_numpy(np.array(cur_target[ :sent_len, :sent_len])).detach()\n",
+    "              loss = criterion(torch.log(attConv(inputs)), target)\n",
     "\n",
-    "      sent_len = _getSentLen(cur_target[0])\n",
-    "      inputs = torch.from_numpy(np.array(cur_inputs[:,:, :sent_len, :sent_len])).detach()\n",
-    "      target = torch.from_numpy(np.array(cur_target[ :sent_len, :sent_len])).detach()\n",
-    "      loss = criterion(torch.log(attConv(inputs)), target)\n",
-    "      \n",
-    "      if not avg_loss:\n",
-    "            avg_loss = loss.item()\n",
-    "      avg_loss = beta * avg_loss + (1-beta) * loss.item()\n",
-    "      t.set_postfix_str(\"Loss: \" + str(avg_loss))\n",
-    "#       pdb.set_trace()\n",
+    "              if not avg_loss[layer, head]:\n",
+    "                    avg_loss[layer, head] = loss.item()\n",
+    "              avg_loss[layer, head] = beta * avg_loss[layer, head] + (1-beta) * loss.item()\n",
+    "              t.set_postfix_str(\"Loss: \" + str(avg_loss[layer, head]))\n",
+    "        #       pdb.set_trace()\n",
     "\n",
-    "      loss.backward()\n",
-    "#       optimizer.step()\n",
+    "              loss.backward()\n",
+    "              optimizer.step()\n",
     "\n",
-    "#     scheduler.step(avg_loss)\n",
-    "#    t.clear()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Attempt 2"
+    "            scheduler.step(avg_loss[layer, head])\n",
+    "        #    t.clear()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-10T18:50:04.829422Z",
-     "start_time": "2020-08-10T18:50:04.824480Z"
-    },
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": false,
-    "id": "HuUdGkgm5lyN"
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "class AllAttentionsCombiner(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(AllAttentionsCombiner, self).__init__()\n",
-    "        self.n1 = 12 * 12\n",
-    "        self.n2 = 24 * 16\n",
-    "\n",
-    "        self.weight = nn.Parameter(torch.zeros(self.n1, self.n2))\n",
-    "        nn.init.xavier_uniform_(self.weight)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = x.view(self.n1, x.size(2), x.size(3), 1)\n",
-    "        x = x.permute(1, 2, 0, 3)\n",
-    "        w = F.softmax(self.weight)\n",
-    "        x = x @ w\n",
-    "        x = x.squeeze().permute(2, 0, 1)\n",
-    "        return x.view(24, 16, x.size(2), x.size(3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name '_getSentLen' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-b667b548666b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m       \u001b[0mcur_target\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtarget_memmap\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m       \u001b[0msent_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_getSentLen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur_target\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m       \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur_inputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0msent_len\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0msent_len\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m       \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur_target\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0msent_len\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0msent_len\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name '_getSentLen' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "attConv = AllAttentionsCombiner()\n",
-    "optimizer = torch.optim.Adam(attConv.parameters(), lr = 5e-3)\n",
-    "criterion = nn.KLDivLoss(reduction = 'batchmean')\n",
-    "avg_loss = None\n",
-    "beta = 0.95\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, factor = 0.5, patience = 3, \n",
-    "                                                       threshold = 1e-2,\n",
-    "                                                       min_lr = 1e-4,\n",
-    "                                                      verbose = True)\n",
-    "\n",
-    "for i in range(100):\n",
-    "    print(\"Epoch \" + str(i))\n",
-    "    for i in trange(len(inputs_memmap)):\n",
-    "      attConv.zero_grad()\n",
-    "      cur_inputs = inputs_memmap[i]\n",
-    "      cur_target = target_memmap[i]\n",
-    "\n",
-    "      sent_len = _getSentLen(cur_target[0,0, 0])\n",
-    "      inputs = torch.from_numpy(cur_inputs[:,:, :sent_len, :sent_len])\n",
-    "      target = torch.from_numpy(cur_target[:,:, :sent_len, :sent_len]) \n",
-    "      loss = criterion(torch.log(attConv(inputs)), target)\n",
-    "      if not avg_loss:\n",
-    "            avg_loss = loss.item()\n",
-    "      avg_loss = beta * avg_loss + (1-beta) * loss.item()\n",
-    "      t.set_postfix_str(\"Loss: \" + str(avg_loss))\n",
-    "      loss.backward()\n",
-    "      optimizer.step()\n",
-    "\n",
-    "    scheduler.step(avg_loss)\n",
-    "    t.clear()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
