--- a/attentions-first-time.ipynb
+++ b/attentions-first-time.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-11T18:51:46.129829Z",
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-11T18:51:48.838700Z",
@@ -376,7 +376,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/specific/scratches/scratch/guy/datasets\n"
+      "/specific/netapp5_3/rent_public/olab-01-08-2021/amnlp2020/guy_ariel/guy/datasets\n"
      ]
     }
    ],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -425,7 +425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/specific/scratches/scratch/guy\n",
+      "/specific/netapp5_3/rent_public/olab-01-08-2021/amnlp2020/guy_ariel/guy\n",
       "mkdir: cannot create directory 'datasets': File exists\n"
      ]
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-11T18:52:22.072850Z",
@@ -458,7 +458,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 75000/75000 [01:38<00:00, 758.67it/s]\n"
+      "100%|██████████| 75000/75000 [03:55<00:00, 318.50it/s]\n"
      ]
     }
    ],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-10T08:04:21.720127Z",
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-11T18:52:42.105495Z",
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-11T18:52:42.121351Z",
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-11T18:52:50.949397Z",
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-11T18:53:21.643478Z",
@@ -672,7 +672,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 18%|█▊        | 18/100 [00:00<00:00, 176.62it/s]"
+      " 42%|████▏     | 42/100 [00:00<00:00, 416.36it/s]"
      ]
     },
     {
@@ -686,8 +686,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 414.74it/s]\n",
-      " 16%|█▌        | 16/100 [00:00<00:00, 154.18it/s]"
+      "100%|██████████| 100/100 [00:00<00:00, 451.54it/s]\n",
+      " 29%|██▉       | 29/100 [00:00<00:00, 287.39it/s]"
      ]
     },
     {
@@ -701,8 +701,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 268.16it/s]\n",
-      " 22%|██▏       | 22/100 [00:00<00:00, 186.84it/s]"
+      "100%|██████████| 100/100 [00:00<00:00, 273.56it/s]\n",
+      " 41%|████      | 41/100 [00:00<00:00, 405.79it/s]"
      ]
     },
     {
@@ -716,7 +716,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 233.79it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 363.80it/s]\n"
      ]
     }
    ],
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2229,6 +2229,117 @@
     "\n",
     "    scheduler.step(avg_loss)\n",
     "    t.clear()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Attention Heads without Softmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Linear(in_features=768, out_features=768, bias=True),\n",
+       " Linear(in_features=768, out_features=768, bias=True),\n",
+       " Linear(in_features=768, out_features=768, bias=True),\n",
+       " Dropout(p=0.1, inplace=False)]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tmp = (bertModel.encoder.layer[0].attention.self)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-10T18:50:13.397980Z",
+     "start_time": "2020-08-10T18:49:13.512Z"
+    },
+    "colab": {},
+    "colab_type": "code",
+    "collapsed": false,
+    "id": "4xh88-4o5lyP"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-104-309960a6539d>:12: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  t = tqdm_notebook(enumerate(encodedA_list))\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18ab1402ad2c4354879dd92bcd228017",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "max_sent_len = 60\n",
+    "full_target = True\n",
+    "\n",
+    "target_shape = (100, 24, 16, max_sent_len, max_sent_len) if full_target else (100, max_sent_len, max_sent_len)\n",
+    "inputs_memmap = np.memmap(guy_folder + \"/inputs_no_softmax.memmap\", dtype = 'float32', shape = (100, 12, 12, max_sent_len, max_sent_len), mode = \"w+\")\n",
+    "target_memmap = np.memmap(guy_folder + \"/target_no_softmax.memmap\", dtype = 'float32', shape = target_shape, mode = \"w+\")\n",
+    "\n",
+    "inputs_memmap[:] = None\n",
+    "target_memmap[:] = None\n",
+    "\n",
+    "from tqdm import tqdm_notebook\n",
+    "t = tqdm_notebook(enumerate(encodedA_list))\n",
+    "for i, encodedA in t:\n",
+    "        inputs = _getAttentionsReshaped(bertModel(**encodedA), wordsToTokens = None, reshape = False,\n",
+    "                                       with_softmax = False).detach().numpy()\n",
+    "        target = _getAttentionsReshaped(largeBertModel(**encodedA), wordsToTokens = None, reshape = False,\n",
+    "                                       with_softmax = False).detach().numpy()\n",
+    "\n",
+    "        if not full_target:\n",
+    "            target = target[10, 0]\n",
+    "        \n",
+    "        sent_len = target.shape[-1]\n",
+    "        inputs_memmap[i, :, :, :sent_len, :sent_len] = inputs\n",
+    "        target_memmap[i, :sent_len, :sent_len] = target\n",
+    "\n",
+    "\n",
+    "\n",
+    "inputs_memmap.flush()\n",
+    "target_memmap.flush()\n"
    ]
   },
   {
