--- a/attentions.ipynb
+++ b/attentions.ipynb
@@ -4084,6 +4084,312 @@
    "source": [
     "sim_mat = headSimilarityWithPadding(robertaModel, bertModel,_sliceToBatches(robertaEncoded, 10), _sliceToBatches(bertEncoded, 10) )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class AttentionCombiner(nn.Module):\n",
+    "    def __init__(self, n_total_heads = 12 * 12, c = 1./100):\n",
+    "        super(AttentionCombiner, self).__init__()\n",
+    "        self.n_total_heads = n_total_heads\n",
+    "        self.weight = nn.Parameter(torch.ones((self.n_total_heads,1, 1)) * c)\n",
+    "        \n",
+    "\n",
+    "    def init_weights(self, a = 0):\n",
+    "        nn.init.constant_(self.weight, a)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = x.view(self.n_total_heads, x.size(2), x.size(3))\n",
+    "        w = F.softmax(self.weight)\n",
+    "        # w /= w.sum(axis = 0, keepdims = True)\n",
+    "        x = (w * x).sum(axis = 0)\n",
+    "        return x #F.softmax(x, dim = -1)\n",
+    "\n",
+    "class AttentionConverter(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(AttentionConverter, self).__init__()\n",
+    "        self.combiner1 = AttentionCombiner()\n",
+    "        self.combiner2 = AttentionCombiner()\n",
+    "        self.combiner3 = AttentionCombiner()\n",
+    "\n",
+    "#         self.cnn = nn.Conv1d(1, 1, 3, padding = 1)\n",
+    "#         nn.init.xavier_uniform_(self.cnn.weight)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        shape = x.shape\n",
+    "#         x = self.cnn(x.view(-1, 1, x.size(-1)))\n",
+    "#         x = x.view(*shape)\n",
+    "        x = (self.combiner1(x) + self.combiner2(x) + self.combiner3(x))/3    \n",
+    "        return x #F.softmax(x.view(x.size(-1), x.size(-1)), dim = -1)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# wandb.init(project=\"advanced-nlp-2020\")\n",
+    "avg_loss = np.empty((24,16))\n",
+    "avg_loss[:] = np.nan\n",
+    "beta = 0.9\n",
+    "attConv = AttentionCombiner()\n",
+    "optimizer = torch.optim.Adam(attConv.parameters(), lr = 0.3)\n",
+    "criterion = nn.KLDivLoss(reduction = 'batchmean')\n",
+    "# wandb.watch(attConv, log = 'all')\n",
+    "\n",
+    "for layer in range(24):\n",
+    "    t = (range(16))\n",
+    "    for head in t:\n",
+    "        print(\"{} {}\".format(layer, head))\n",
+    "#         scheduler = (torch.optim.lr_scheduler\n",
+    "#                      .ReduceLROnPlateau(optimizer, factor = 0.5, patience = 15, \n",
+    "#                                                                threshold = 1e-3,\n",
+    "#                                                                min_lr = 1e-5,\n",
+    "#                                                               verbose = False))\n",
+    "        attConv.init_weights(1)\n",
+    "        for e in range(15):\n",
+    "            for i in range(len(inputs_memmap)):\n",
+    "              attConv.zero_grad()\n",
+    "              cur_inputs = inputs_memmap[i]\n",
+    "              cur_target = target_memmap[i, layer, head]\n",
+    "              sent_len = _getSentLen(cur_target[0])\n",
+    "              inputs = torch.from_numpy(cur_inputs[:, :,  :sent_len, :sent_len]).detach()\n",
+    "              target = torch.from_numpy(cur_target[ :sent_len, :sent_len]).detach()\n",
+    "              loss = criterion(torch.log(attConv(inputs) + 1e-8), target)\n",
+    "              if np.isnan(avg_loss[layer, head]):\n",
+    "                    avg_loss[layer, head] = loss.item()\n",
+    "\n",
+    "              avg_loss[layer, head] = beta * avg_loss[layer, head] + (1-beta) * loss.item()\n",
+    "              loss.backward()\n",
+    "              optimizer.step()\n",
+    "\n",
+    "              # wandb.log({\"Loss\": avg_loss[layer, head], \n",
+    "              #            \"Weight\": torch.norm(attConv.weight),\n",
+    "              #           \"layer\": layer, \"head\":  head \n",
+    "              #           }  )\n",
+    "\n",
+    "#               t.set_postfix_str(\"Layer: {} Head: {} Loss: {}\" .format(layer, head, avg_loss[layer, head]) )\n",
+    "            \n",
+    "#             scheduler.step(avg_loss[layer, head])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "selfAtt = bertModel.encoder.layer[0].attention.self\n",
+    "BertSelfAttention = selfAtt.__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def _nakedAttention(\n",
+    "        self,\n",
+    "        hidden_states,\n",
+    "        attention_mask=None,\n",
+    "        head_mask=None,\n",
+    "        encoder_hidden_states=None,\n",
+    "        encoder_attention_mask=None,\n",
+    "        output_attentions=False,\n",
+    "    ):\n",
+    "        mixed_query_layer = self.query(hidden_states)\n",
+    "\n",
+    "        # If this is instantiated as a cross-attention module, the keys\n",
+    "        # and values come from an encoder; the attention mask needs to be\n",
+    "        # such that the encoder's padding tokens are not attended to.\n",
+    "        if encoder_hidden_states is not None:\n",
+    "            mixed_key_layer = self.key(encoder_hidden_states)\n",
+    "            mixed_value_layer = self.value(encoder_hidden_states)\n",
+    "            attention_mask = encoder_attention_mask\n",
+    "        else:\n",
+    "            mixed_key_layer = self.key(hidden_states)\n",
+    "            mixed_value_layer = self.value(hidden_states)\n",
+    "\n",
+    "        query_layer = self.transpose_for_scores(mixed_query_layer)\n",
+    "        key_layer = self.transpose_for_scores(mixed_key_layer)\n",
+    "        value_layer = self.transpose_for_scores(mixed_value_layer)\n",
+    "\n",
+    "        # Take the dot product between \"query\" and \"key\" to get the raw attention scores.\n",
+    "        attention_scores = torch.matmul(query_layer, key_layer.transpose(-1, -2))\n",
+    "        attention_scores = attention_scores / math.sqrt(self.attention_head_size)\n",
+    "        if attention_mask is not None:\n",
+    "            # Apply the attention mask is (precomputed for all layers in BertModel forward() function)\n",
+    "            attention_scores = attention_scores + attention_mask\n",
+    "        \n",
+    "        return attention_scores\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "def setNakedAttentionHook(model):\n",
+    "  allSelfAtts = (filter(lambda x: isinstance(x, BertSelfAttention), model.modules()))\n",
+    "  model._myForwardHooks = []\n",
+    "  def _saveNakedAttention(self, inp, outp):\n",
+    "    model._myNakedAttentions.append(np.squeeze(_nakedAttention(self, *inp).detach().numpy(), 0))\n",
+    "    \n",
+    "  for selfAtt in allSelfAtts:\n",
+    "    model._myForwardHooks.append(selfAtt.register_forward_hook(_saveNakedAttention))\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "list(map(lambda x: x.remove(), bertModel._myForwardHooks ))\n",
+    "list(map(lambda x: x.remove(), largeBertModel._myForwardHooks ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "setNakedAttentionHook(bertModel)\n",
+    "setNakedAttentionHook(largeBertModel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "max_sent_len = 60\n",
+    "full_target = True\n",
+    "\n",
+    "target_shape = (100, 24, 16, max_sent_len, max_sent_len) if full_target else (100, max_sent_len, max_sent_len)\n",
+    "inputs_memmap_naked = np.memmap(guy_folder + \"/inputs_no_softmax.memmap\", dtype = 'float32', shape = (100, 12, 12, max_sent_len, max_sent_len), mode = \"w+\")\n",
+    "target_memmap_naked = np.memmap(guy_folder + \"/target_no_softmax.memmap\", dtype = 'float32', shape = target_shape, mode = \"w+\")\n",
+    "\n",
+    "inputs_memmap_naked[:] = None\n",
+    "target_memmap_naked[:] = None\n",
+    "\n",
+    "from tqdm import tqdm_notebook\n",
+    "t = tqdm_notebook(enumerate(bertEncoded))\n",
+    "for i, encodedA in t:\n",
+    "        bertModel._myNakedAttentions = []\n",
+    "        largeBertModel._myNakedAttentions = []\n",
+    "        bertModel(**encodedA)\n",
+    "        inputs = np.stack(bertModel._myNakedAttentions)\n",
+    "        largeBertModel(**encodedA)\n",
+    "        target = np.stack(largeBertModel._myNakedAttentions)\n",
+    "\n",
+    "        \n",
+    "        sent_len = target.shape[-1]\n",
+    "        inputs_memmap_naked[i, :, :, :sent_len, :sent_len] = inputs\n",
+    "        target_memmap_naked[i, :, :, :sent_len, :sent_len] = target\n",
+    "\n",
+    "\n",
+    "\n",
+    "inputs_memmap_naked.flush()\n",
+    "target_memmap_naked.flush()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# wandb.init(project=\"advanced-nlp-2020\")\n",
+    "avg_loss = np.empty((24,16))\n",
+    "avg_loss[:] = np.nan\n",
+    "beta = 0.9\n",
+    "attConv = AttentionCombiner()\n",
+    "optimizer = torch.optim.Adam(attConv.parameters(), lr = 0.3)\n",
+    "criterion = nn.KLDivLoss(reduction = 'batchmean')\n",
+    "# wandb.watch(attConv, log = 'all')\n",
+    "\n",
+    "for layer in range(24):\n",
+    "    t = (range(16))\n",
+    "    for head in t:\n",
+    "        print(\"{} {}\".format(layer, head))\n",
+    "#         scheduler = (torch.optim.lr_scheduler\n",
+    "#                      .ReduceLROnPlateau(optimizer, factor = 0.5, patience = 15, \n",
+    "#                                                                threshold = 1e-3,\n",
+    "#                                                                min_lr = 1e-5,\n",
+    "#                                                               verbose = False))\n",
+    "        attConv.init_weights(1)\n",
+    "        for e in range(15):\n",
+    "            for i in range(len(inputs_memmap)):\n",
+    "              attConv.zero_grad()\n",
+    "              cur_inputs = inputs_memmap_naked[i]\n",
+    "              cur_target = target_memmap_naked[i, layer, head]\n",
+    "              sent_len = _getSentLen(cur_target[0])\n",
+    "              inputs = torch.from_numpy(cur_inputs[:, :,  :sent_len, :sent_len]).detach()\n",
+    "              target = torch.from_numpy(cur_target[ :sent_len, :sent_len]).detach()\n",
+    "              loss = criterion(torch.log(F.softmax(attConv(inputs), -1) + 1e-8), F.softmax(target, -1))\n",
+    "              if np.isnan(avg_loss[layer, head]):\n",
+    "                    avg_loss[layer, head] = loss.item()\n",
+    "\n",
+    "              avg_loss[layer, head] = beta * avg_loss[layer, head] + (1-beta) * loss.item()\n",
+    "              loss.backward()\n",
+    "              optimizer.step()\n",
+    "\n",
+    "              # wandb.log({\"Loss\": avg_loss[layer, head], \n",
+    "              #            \"Weight\": torch.norm(attConv.weight),\n",
+    "              #           \"layer\": layer, \"head\":  head \n",
+    "              #           }  )\n",
+    "\n",
+    "#               t.set_postfix_str(\"Layer: {} Head: {} Loss: {}\" .format(layer, head, avg_loss[layer, head]) )\n",
+    "            \n",
+    "#             scheduler.step(avg_loss[layer, head])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
