--- a/attentions-first-time.ipynb
+++ b/attentions-first-time.ipynb
@@ -63,7 +63,7 @@
     },
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "id": "f6nEbhZs5lwe"
    },
    "outputs": [
